2005-03-06 10:03  antirez

	* ChangeLog, doc/AIO-Extension.txt: Documentation for the AIO
	  extension added

2005-03-06 09:48  antirez

	* ChangeLog, jim-aio.c: Added support for stdin/stdout/stderr to
	  AIO

2005-03-06 09:31  antirez

	* ChangeLog, Makefile, TODO, jim-aio.c, jim.c, jim.h: Added
	  Jim_GetEnum() API function. StringCoreCommand and AIO extension
	  modified to use this API. There are plenty of other places where
	  this will work better than the raw CompareStringImmediate().
	  Original idea from Tcl, Original implementation from Pat Thoyts,
	  I changed the implementationto use CSI and for automatic error
	  generation with all the valid options listed.

2005-03-05 23:06  patthoyts

	* jim.c: Free an objects internal representation before freeing the
	  string rep.

2005-03-05 22:11  antirez

	* ChangeLog, jim-aio.c: more AIO file methods.

2005-03-05 19:51  antirez

	* ChangeLog, jim-aio.c: ANSI I/O seek method implemented.

2005-03-05 16:04  antirez

	* ChangeLog, jim.c, jim.h: Solved a problem with Jim_Length()

2005-03-05 16:01  antirez

	* ChangeLog, Makefile, jim-aio.c, jim.c, jim.h: Initial version of
	  AIO (ANSI C I/O) extension added.  Some bit of const safeness. A
	  new API function to get the object length, Jim_Length().

2005-03-05 13:22  antirez

	* ChangeLog, jim-posix.c, jim-win32.c, jim-win32com.c, jim.c,
	  jim.h: delProc callback added to Jim_CreateCommand().  Core
	  commands handling updated to respect the new sematic.

2005-03-05 13:13  antirez

	* ChangeLog, jim-posix.c: extern int errno declaration removed from
	  the posix extension.

2005-03-05 11:45  patthoyts

	* jim.c, jim.h: Added Jim_GetAssocData api. This for permitting
	  packages to register a data structure with a Jim interpreter.

2005-03-05 10:46  antirez

	* ChangeLog, jim.c, jim.h: removed strcasecmp() and isascii(). Now
	  the Jim core is fully ANSI-C excluding the [load] command. I plan
	  to add a JIM_FORCE_ANSIC ifdef to exclude the load command for