@@ -1,5 +1,5 @@
 ANSI I/O extensiond documentation
-$id: $
+$Id: AIO-Extension.txt,v 1.3 2005/03/06 10:43:06 antirez Exp $
 
 Overview
 ~~~~~~~~
